tests/test163.rael.exp
Error [tests/test163.rael:2:9]: An expression is expected after 'with'
|     with
|         ^
